--- a/Simulation/Monitoring/Prometheus/prometheus.yml
+++ b/Simulation/Monitoring/Prometheus/prometheus.yml
@@ -5,12 +5,12 @@ global:
 scrape_configs:
   - job_name: 'routing_service_aggregator'
     static_configs:
-      - targets: ['localhost:8000']
+      - targets: ['10.0.3.11:8000']
   
   - job_name: 'routing_service_dds_to_kafka'
     static_configs:
-      - targets: ['localhost:8001']
+      - targets: ['10.0.3.11:8001']
   
   - job_name: 'kafka'
     static_configs:
-      - targets: ['localhost:7075']
+      - targets: ['10.0.3.12:8002']
